[project]
name = "next-word-predictor-lstm-model"
version = "0.1.0"
description = "Its just predict the next word"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.3.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "streamlit>=1.35.0",
    "tensorflow>=2.20.0",
]
